--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ button::after {
  outline: transparent;
  position: relative;
  left: 520px;
- bottom: 570px;
+ bottom: 360px;
  margin: 20px;
 }
 
@@ -154,7 +154,7 @@ button::after {
  outline: transparent;
  position: relative;
  left: 520px;
- bottom: 570px;
+ bottom: 360px;
 }
 
 button::after {
@@ -253,7 +253,7 @@ button::after {
  outline: transparent;
  position: relative;
  left: 520px;
- bottom: 570px;
+ bottom: 36s0px;
 }
 
 button::after {
